paddings in about page

--- a/html/about.html
+++ b/html/about.html
@@ -130,14 +130,14 @@
       <br />
     </section>
     <div id="aboutLast">
-      <p style="width: 50%">
+      <p style="width: 50%; padding: 2%">
         Магазин "Rolf" в Караколе - это не только место, где вы можете
         приобрести высококачественные продукты, но и место, где вы можете
         обратиться за дружелюбным и профессиональным обслуживанием. Мы стремимся
         создать комфортную и уютную атмосферу для наших клиентов, чтобы вы могли
         с уверенностью делать свой выбор.
       </p>
-      <p style="width: 40%">
+      <p style="width: 40%; padding: 2%">
         Благодарим вас за выбор магазина "Rolf"! Мы гордимся тем, что можем
         стать вашим надежным партнером в поддержании здоровья и
         производительности вашего автомобиля.
